--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     </tr>
   </table>
   <hr>
-  <a href="contact_me.html">contacting details</a>
-  <a href="My-hobbies.html">My hobbies</a>
+  <a href="contact.html">contacting details</a>
+  <a href="hobbies.html">My hobbies</a>
 </body>
 
 </html>
