--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p><em>Student at <strong><a href="https://inha.uz/" target="_blank">INHA University</a></strong> and Backend Developer</em></p>
         <p>I am a student and I work as <a href="https://www.merriam-webster.com/dictionary/software%20engineering#:~:text=Definition%20of%20software%20engineering,maintenance%20of%20complex%20computer%20programs" target="_blank">Software
             Engineer</a> at
-          Circus.I like <a href="https://youtu.be/uNT_AxXrUGs">eating meat</a>.</p>
+          Circus.I 🧡 python programming language.</p>
       </td>
     </tr>
   </table>
